--- a/css/styles.css
+++ b/css/styles.css
@@ -33,3 +33,15 @@
 .display-none {
     display: none;
 }
+
+@media (min-width: 768px) {
+    .large {
+        margin: auto;
+    }
+};
+
+@media (min-width: 1024px) {
+    .large {
+        margin: auto;
+        }
+    );
